--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
     <span class="backgroundBox"></span>
     <div class="helpBox">
       <span class="close">
-        <img src="src/WebPad.png" style="margin-right: 5px; height: 30px" />
+        <img src="WebPad.png" style="margin-right: 5px; height: 30px" />
         <b>Web Pad</b>
         <em>&times;</em>
       </span>
