--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="Version" content="21.12.06" />
     <meta name="Author" content="CyberMajeed" />
-    <link rel="shortcut icon" href="src/WebPad.png" />
+    <link rel="shortcut icon" href="WebPad.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Pad</title>
     <style>
